# CMSIS-DSP

./: .gitattributes  .gitconfig  .gitignore  AGENTS.md  ARM.CMSIS-DSP.pdsc  CMakeLists.txt  MANIFEST.in  PythonWrapper_README.md  README.md  gen_pack.sh  index.html  latest  pyproject.toml  setup.py  update_versions.sh  vcpkg-configuration.json  vcpkg-neon-configuration.json  version.css  version.js
ComputeGraph/examples/: CMakeLists.txt  README.md  References.md
Examples/ARM/: CMakeLists.txt
Source/: CMakeLists.txt  Makefile  configDsp.cmake
Source/BasicMathFunctions/: BasicMathFunctionsF16.c  arm_abs_f16.c  arm_abs_f32.c  arm_abs_f64.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f16.c  arm_add_f32.c  arm_add_f64.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_and_u16.c  arm_and_u32.c  arm_and_u8.c  arm_clip_f16.c  arm_clip_f32.c  arm_clip_q15.c  arm_clip_q31.c  arm_clip_q7.c  arm_dot_prod_f16.c  arm_dot_prod_f32.c  arm_dot_prod_f64.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f16.c  arm_mult_f32.c  arm_mult_f64.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f16.c  arm_negate_f32.c  arm_negate_f64.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_not_u16.c  (+29 more)
Source/BayesFunctions/: arm_gaussian_naive_bayes_predict_f16.c  arm_gaussian_naive_bayes_predict_f32.c
Source/CommonTables/: CommonTablesF16.c  Config.cmake  arm_common_tables.c  arm_common_tables_f16.c  arm_const_structs.c  arm_const_structs_f16.c  arm_mve_tables.c  arm_mve_tables_f16.c  arm_neon_tables.c  arm_neon_tables_f16.c
Source/ComplexMathFunctions/: ComplexMathFunctions.c  Config.cmake  arm_cmplx_conj_f16.c  arm_cmplx_conj_f32.c  arm_cmplx_conj_q15.c  arm_cmplx_conj_q31.c  arm_cmplx_dot_prod_f16.c  arm_cmplx_dot_prod_f32.c  arm_cmplx_dot_prod_q15.c  arm_cmplx_dot_prod_q31.c  arm_cmplx_mag_f16.c  arm_cmplx_mag_f32.c  arm_cmplx_mag_f64.c  arm_cmplx_mag_fast_q15.c  arm_cmplx_mag_q15.c  arm_cmplx_mag_q31.c  arm_cmplx_mag_squared_f16.c  arm_cmplx_mag_squared_f32.c  arm_cmplx_mag_squared_f64.c  arm_cmplx_mag_squared_q15.c  arm_cmplx_mag_squared_q31.c  arm_cmplx_mult_cmplx_f16.c  arm_cmplx_mult_cmplx_f32.c  arm_cmplx_mult_cmplx_f64.c  arm_cmplx_mult_cmplx_q15.c  arm_cmplx_mult_cmplx_q31.c  arm_cmplx_mult_real_f16.c  arm_cmplx_mult_real_f32.c  arm_cmplx_mult_real_q15.c  arm_cmplx_mult_real_q31.c
Source/ControllerFunctions/: Config.cmake  arm_pid_init_f32.c  arm_pid_init_q15.c  arm_pid_init_q31.c  arm_pid_reset_f32.c  arm_pid_reset_q15.c  arm_pid_reset_q31.c  arm_sin_cos_f32.c  arm_sin_cos_q31.c
Source/DistanceFunctions/: Config.cmake  arm_boolean_distance.c  arm_boolean_distance_template.h  arm_braycurtis_distance_f16.c  arm_braycurtis_distance_f32.c  arm_canberra_distance_f16.c  arm_canberra_distance_f32.c  arm_chebyshev_distance_f16.c  arm_chebyshev_distance_f32.c  arm_chebyshev_distance_f64.c  arm_cityblock_distance_f16.c  arm_cityblock_distance_f32.c  arm_cityblock_distance_f64.c  arm_correlation_distance_f16.c  arm_correlation_distance_f32.c  arm_cosine_distance_f16.c  arm_cosine_distance_f32.c  arm_cosine_distance_f64.c  arm_dice_distance.c  arm_dtw_distance_f32.c  arm_dtw_init_window_q7.c  arm_dtw_path_f32.c  arm_euclidean_distance_f16.c  arm_euclidean_distance_f32.c  arm_euclidean_distance_f64.c  arm_hamming_distance.c  arm_jaccard_distance.c  arm_jensenshannon_distance_f16.c  arm_jensenshannon_distance_f32.c  arm_kulsinski_distance.c  arm_minkowski_distance_f16.c  arm_minkowski_distance_f32.c  arm_rogerstanimoto_distance.c  arm_russellrao_distance.c  arm_sokalmichener_distance.c  arm_sokalsneath_distance.c  arm_yule_distance.c
Source/FastMathFunctions/: Config.cmake  arm_atan2_f16.c  arm_atan2_f32.c  arm_atan2_q15.c  arm_atan2_q31.c  arm_cos_f32.c  arm_cos_q15.c  arm_cos_q31.c  arm_divide_q15.c  arm_divide_q31.c  arm_sin_f32.c  arm_sin_q15.c  arm_sin_q31.c  arm_sqrt_q15.c  arm_sqrt_q31.c  arm_vexp_f16.c  arm_vexp_f32.c  arm_vexp_f64.c  arm_vinverse_f16.c  arm_vlog_f16.c  arm_vlog_f32.c  arm_vlog_f64.c  arm_vlog_q15.c  arm_vlog_q31.c
Source/FilteringFunctions/: Config.cmake  FilteringFunctions.c  arm_biquad_cascade_df1_32x64_init_q31.c  arm_biquad_cascade_df1_32x64_q31.c  arm_biquad_cascade_df1_f16.c  arm_biquad_cascade_df1_f32.c  arm_biquad_cascade_df1_fast_q15.c  arm_biquad_cascade_df1_fast_q31.c  arm_biquad_cascade_df1_init_f16.c  arm_biquad_cascade_df1_init_f32.c  arm_biquad_cascade_df1_init_q15.c  arm_biquad_cascade_df1_init_q31.c  arm_biquad_cascade_df1_q15.c  arm_biquad_cascade_df1_q31.c  arm_biquad_cascade_df2T_f16.c  arm_biquad_cascade_df2T_f32.c  arm_biquad_cascade_df2T_f64.c  arm_biquad_cascade_df2T_init_f16.c  arm_biquad_cascade_df2T_init_f32.c  arm_biquad_cascade_df2T_init_f64.c  arm_biquad_cascade_stereo_df2T_f16.c  arm_biquad_cascade_stereo_df2T_f32.c  arm_biquad_cascade_stereo_df2T_init_f16.c  arm_biquad_cascade_stereo_df2T_init_f32.c  arm_conv_f32.c  arm_conv_fast_opt_q15.c  arm_conv_fast_q15.c  arm_conv_fast_q31.c  arm_conv_opt_q15.c  arm_conv_opt_q7.c  arm_conv_partial_f32.c  arm_conv_partial_fast_opt_q15.c  arm_conv_partial_fast_q15.c  arm_conv_partial_fast_q31.c  arm_conv_partial_opt_q15.c  arm_conv_partial_opt_q7.c  arm_conv_partial_q15.c  arm_conv_partial_q31.c  arm_conv_partial_q7.c  arm_conv_q15.c  (+78 more)
Source/InterpolationFunctions/: arm_bilinear_interp_f16.c  arm_bilinear_interp_f32.c  arm_bilinear_interp_q15.c  arm_bilinear_interp_q31.c  arm_bilinear_interp_q7.c  arm_linear_interp_f16.c  arm_linear_interp_f32.c  arm_linear_interp_q15.c  arm_linear_interp_q31.c  arm_linear_interp_q7.c  arm_spline_interp_f32.c  arm_spline_interp_init_f32.c
Source/MatrixFunctions/: Config.cmake  MatrixFunctions.c  MatrixFunctionsF16.c  _arm_mat_mult_neon.c  _arm_mat_mult_neon_buffers.c  _arm_mat_mult_neon_f32.c  (+71 more)
Testing/: .gitignore  CMakeLists.txt  README.md  arm_dsp_config.h  bench.txt  config.cmake  configBoot.cmake  configCore.cmake  configLib.cmake  configPlatform.cmake  desc.txt  desc_f16.txt  desc_neon.txt  main.cpp  processResult.py  pyproject.toml  requirements.txt  requirements_win.txt  test_neon.sh  testmain.cpp
(+6411 files in other folders)
